--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_Layout.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_Layout.cshtml
@@ -6,9 +6,9 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
+@Html.Partial("_NavBar")
 @*<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -30,45 +30,19 @@
     </div>
 </div>*@
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img alt="Erehwon" src="">
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View by block <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Block 1</a></li>
-                            <li><a href="#">Block 2</a></li>
-                            <li><a href="#">Block 3</a></li>
-                            <li><a href="#">Block 4</a></li>
-                            <li><a href="#">Block 5</a></li>
-                        </ul>
-                    </li>
-                    <li></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.Partial("_LoginPartial")</li>
-                    <li><a href="#">View my order</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> from the UK for CE831 Module
+        </p>
+        <p>Miguel Angel Fajardo Turner&copy;</p>
+        <a href="http://essex.ac.uk">University Of Essex</a>
+    </footer>
+</div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
 </body>
 </html>
