--- a/ErehwonMvc/ErehwonMvc/Views/PlotDetail/Plot.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/PlotDetail/Plot.cshtml
@@ -10,8 +10,8 @@
     <img class="col-md-6" alt="Plot Image" src="@imgPath"/>
     <div class="col-md-6">
         <p>@Model.PlotDescription</p>
-        <h4>Available m<sup>2</sup></h4>
-        <p>@Model.AvailableLandMeters m<sup>2</sup></p>
+        <h4>Available ha</h4>
+        <p>@Model.Hectares ha</p>
         <button class="btn btn-success btn-sm">Purchase</button>
     </div> 
 </div>
