--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img alt="Erehwon" src="">
+                <img alt="Erehwon Lands" src="">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
