--- a/ErehwonMvc/ErehwonMvc/Views/Home/Index.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Home/Index.cshtml
@@ -1,15 +1,64 @@
-﻿@using ErehwonMvc.Models
+﻿@using System.ServiceModel.Syndication
+@using ErehwonMvc.ApiController
+@using ErehwonMvc.Helpers
+@using ErehwonMvc.Models
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Erehwon Lands";
 }
 
 <div class="jumbotron">
-    <h1>Erehwon</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p>
-        <a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
-    </p>
+    <h1>Erehwon Lands</h1>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+
+            @{
+                var pcc = new PlotCategoryController();
+                var categories = pcc.Get();
+                var count = 0;
+
+                foreach (var plotCategory in categories)
+                {
+                    var img = ViewHelpers.GetPlotCarrousel(plotCategory.PlotCategoryID);
+
+                    var divClass ="item";
+
+                    if (count == 0)
+                    {
+                        divClass = "item active";
+                    }
+
+                    <div class="@divClass">
+                        <img src="@img" alt="img">
+                    </div>
+                    count++;
+                }
+            }
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
+@{
+    <h1>Mis huevos putos</h1>
+    <p></p>
+}
 
 <div class="row">
     <div class="col-md-4">
@@ -26,25 +75,32 @@
             @{
                 var test = new PlotDetailModel();
                 test.PlotName = "My Plot";
-                test.AvailableLandMeters = 1000;
+                test.Hectares = 1000;
                 test.PlotDescription = "My Desc";
                 test.PlotCategoryId = 1;
 
-                var availability = new PlotAvailabilityModel()
-                {
-                    PlotDescription = "Plot 2",
-                    TotalHectares = 100.0,
-                    PlotCategoryId = 1,
-                    PurchasedMeters = 50.0
-                };
             }
             @Html.Partial("~/Views/PlotDetail/Plot.cshtml", test)
         </div>
     </div>
     <div class="col-md-4">
         <h2>Availability</h2>
+    @{
+
+        foreach (var category in categories)
+        {
+            var availability = new PlotAvailabilityModel()
+            {
+                PlotDescription = category.PlotCategoryDescription,
+                TotalHectares = category.TotalHectares.Value,
+                PlotCategoryId = category.PlotCategoryID,
+                PurchasedHectares = 50.0
+            };
+            @Html.Partial("~/Views/PlotAvailability/PlotAvailability.cshtml", availability);
+        }
+
+    }
         
-        @Html.Partial("~/Views/PlotAvailability/PlotAvailability.cshtml", availability)
         <p>Show percentage of plots available for each block</p>
     </div>
 </div>
