--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img alt="Erehwon Lands" src="">
             </a>
         </div>
@@ -11,11 +11,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View by block <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Block 1</a></li>
-                        <li><a href="#">Block 2</a></li>
-                        <li><a href="#">Block 3</a></li>
-                        <li><a href="#">Block 4</a></li>
-                        <li><a href="#">Block 5</a></li>
+                        <li><a href="/PlotDetail/Plot/1">Block 1</a></li>
+                        <li><a href="/PlotDetail/Plot/2">Block 2</a></li>
+                        <li><a href="/PlotDetail/Plot/3">Block 3</a></li>
+                        <li><a href="/PlotDetail/Plot/4">Block 4</a></li>
+                        <li><a href="/PlotDetail/Plot/5">Block 5</a></li>
                     </ul>
                 </li>
                 <li></li>
