--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
@@ -22,7 +22,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>@Html.Partial("_LoginPartial")</li>
-                <li><a href="#">View my order</a></li>
+                <li><a href="/Order">View my order</a></li>
             </ul>
         </div>
     </div>
