--- a/ErehwonMvc/ErehwonMvc/Views/PlotAvailability/PlotAvailability.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/PlotAvailability/PlotAvailability.cshtml
@@ -9,14 +9,14 @@
         var imgPath = ViewHelpers.GetPlotImage(@Model.PlotCategoryId, ImageType.Thumbnail);
 
         // Set percentage bar
-        var percentage = (@Model.PurchasedHectares/@Model.TotalHectares) * 100.0;
+        var percentage = ((@Model.TotalHectares - @Model.PurchasedHectares ) * 100.0) / @Model.TotalHectares;
     }
     <img class="col-md-4" alt="Plot Image" src="@imgPath" />
     <div class="col-md-8">
-        <h4>Purchased</h4>
+        <h4>Block @Model.PlotCategoryId</h4>
         <div class="progress">
             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-                 aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                 aria-valuemin="0" aria-valuemax="100" style="width:@($"{percentage:0.00}")%">
                 @($"{percentage:0.00}") %
             </div>
         </div>
