--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_NavBar.cshtml
@@ -7,7 +7,6 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">Link</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View by block <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -22,6 +21,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>@Html.Partial("_LoginPartial")</li>
+c                <li><span style="margin-left: 50px"></span></li>
                 <li><a href="/Order">View my order</a></li>
             </ul>
         </div>
