--- a/ErehwonMvc/ErehwonMvc/Views/Order/OrderPlot.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Order/OrderPlot.cshtml
@@ -2,10 +2,10 @@
 @using ErehwonMvc.Helpers
 @model ErehwonMvc.Models.Plot
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")"></script>
-
-@{ var imgPath = ViewHelpers.GetPlotImage(Model.PlotCategoryID, ImageType.Thumbnail); }
+@{
+    var ViewHelpers = new ViewHelpers();
+    var imgPath = ViewHelpers.GetPlotImage(Model.PlotCategoryID, ImageType.Thumbnail);
+}
 <div class="col-md-8">
     <h2>@Model.PlotName</h2>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -13,15 +13,18 @@
     <div class="col-md-4">
         <p>@Model.PlotDescription</p>
         <h4>Number of ha to purchase</h4>
-        @using (Html.BeginForm("UpdatePlot", "Order", Model, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        @using (Html.BeginForm("UpdatePlot", "Order", Model, FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
         {
-            @Html.TextBoxFor(m => m.TotalHectares, new { @class = "form-control", @type = "number",})
-            @Html.ValidationMessageFor(m => m.TotalHectares, "", new { @class = "text-danger" })
+            @Html.TextBoxFor(m => m.TotalHectares, new {@class = "form-control", @type = "number",})
+            @Html.ValidationMessageFor(m => m.TotalHectares, "", new {@class = "text-danger"})
             <h2></h2>
+            <h4>Price</h4>
+            <h2>@Model.Price g</h2>
             <button class="btn btn-success" onclick="location.href = '@Url.Action("UpdatePlot", "Order", Model)'">Update Order</button>
             <h2></h2>
-            <button class="btn btn-danger" onclick="location.href = '@Url.Action("Remove", "Order", Model)'">Remove</button>
+
         }
-    </div>
+        <button class="btn btn-danger" onclick="location.href = '@Url.Action("Remove", "Order", Model)'">Remove</button>
+    </div>  
 </div>
 <br />
