--- a/ErehwonMvc/ErehwonMvc/Views/PlotAvailability/PlotAvailability.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/PlotAvailability/PlotAvailability.cshtml
@@ -5,7 +5,7 @@
 <div class="col-md-12">
     @{
         //Set plot image
-
+        var ViewHelpers = new ViewHelpers();
         var imgPath = ViewHelpers.GetPlotImage(@Model.PlotCategoryId, ImageType.Thumbnail);
 
         // Set percentage bar
