--- a/ErehwonMvc/ErehwonMvc/Views/Manage/Index.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErehwonMvc.Models.IndexViewModel
+﻿@using ErehwonMvc.Helpers
+@model ErehwonMvc.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
@@ -29,8 +30,7 @@
             @Html.ActionLink("Manage", "ManageLogins") ]
         </dd>
         <dd>
-            <h1>My Previous Orders</h1>
-
+            <a href="~/Order/PreviousOrders">My Previous Orders</a>
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
