--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_Layout.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
 <div class="container body-content">
     @RenderBody()
     <hr/>
-    <footer>
-        <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> from the UK for CE831 Module
-        </p>
-        <p>Miguel Angel Fajardo Turner&copy;</p>
+    <footer class="text-center text-capitalize">
+        <p>Made as a experiment</p>
+        <p>from the UK for CE831 Module.</p>
+        <p>By <a href="mailto:mf16607@essex.ac.uk">Miguel Angel Fajardo Turner&copy;</a></p>
         <a href="http://essex.ac.uk">University Of Essex</a>
     </footer>
 </div>
