Added Github Info

--- a/ErehwonMvc/ErehwonMvc/Views/Shared/_Layout.cshtml
+++ b/ErehwonMvc/ErehwonMvc/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
         <p>from the UK for CE831 Module.</p>
         <p>By <a href="mailto:mf16607@essex.ac.uk">Miguel Angel Fajardo Turner&copy;</a></p>
         <a href="http://essex.ac.uk">University Of Essex</a>
+        <p><a href="http://www.github.com/miguelstrife">GitHub</a></p>
     </footer>
 </div>
 
